fix vertical alignment

--- a/css/style.css
+++ b/css/style.css
@@ -72,8 +72,8 @@ section.title div p{
     margin: 0;
 }
 
-section#playstation-five{
-    padding-top: 5rem;
+section#ps_five_type{
+    padding: 4rem 0;
 }
 
 section#playstation-five button,
